# rag-chunking-eval

./: EVIDENCE.md  PRD.md  README.md  parking_lot.md  pyproject.toml
chunkeval/: __init__.py  bm25.py  cli.py  corpus.py  metrics.py  report.py  splitters.py  sweep.py
data/: questions.jsonl
data/corpus/: atmosphere_layers.txt  carbon_cycle.txt  cellular_respiration.txt  mitochondria.txt  nitrogen_cycle.txt  ocean_currents.txt  photosynthesis.txt  plate_tectonics.txt  water_cycle.txt
examples/: sample-report.html  sample-report.md
tests/: test_chunkeval.py
